--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 
 <script>
-const scriptURL = 'SCRIPT_URL_GOES_HERE'; // Ganti nanti dengan URL script Google Apps Script kamu
+const scriptURL = 'https://script.google.com/macros/s/AKfycbz-SFPfW3Iy94-T9fIiqj1KobpyzZNDr4uwOcY1MyQD0HWkPZ6ekolOjEzARMqItMBf/exec'; // Ganti nanti dengan URL script Google Apps Script kamu
 const form = document.getElementById('dataForm');
 const successMessage = document.getElementById('successMessage');
 
